--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 instagram/*.pyc
 tinder/*.pyc
-twitter/codigo/*.pyc
+twitter/*.pyc
 instagram/*.log
 tinder/*.log
-twitter/codigo/*.log
+twitter/*.log
